--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 /* CSS Document */
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,600,700,300);
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -43,7 +44,9 @@ body {font:normal 12px "Montserrat-Regular", Arial, Helvetica, sans-serif; color
 		#header	.submenu .menu2 li  a{ display:block; width:110px; text-transform:uppercase;}
 		#header	.submenu .menu2 li a:hover { text-decoration:underline }
 
-/*border-bottom: 1px solid #6cac4f*/
+/* Això fa que els div flotants de dins quedin embolcallats. Many bothans died to reveal this secret... */
+#content {overflow:hidden;}
+
 #content .slider { width:1400px; height: 400px; background-color:#dddddd}
 #content .post  {float: left;}
 #content .post .thumb {float: left; width: 245px; margin-bottom: 20px;margin-right: 20px;}
@@ -58,22 +61,36 @@ body {font:normal 12px "Montserrat-Regular", Arial, Helvetica, sans-serif; color
 	#content #sidebar-wrapper .post p.data { font-family: 'Open Sans', sans-serif; font-style:italic; font-size: 10px;margin-bottom: 10px;}	
 	#content #sidebar-wrapper .post h2 {font-family: 'Open Sans', sans-serif; font-weight: 700; font-size: 16px; margin-bottom: 10px;}
 	#content #sidebar-wrapper .post h2 a {text-decoration:none; color: #2b5e29;}
+	
+	#content #content-wrapper {float:left; width:900px; padding:0 8px 0 8px;}
 	#content #content-wrapper .post.sticky  h1{ font-family: 'Open Sans', sans-serif; font-weight: 700; font-size: 16px; margin-bottom: 10px;}
 	#content #content-wrapper .post.sticky  h2{ font-family: 'Open Sans', sans-serif; font-weight: 700; font-size: 14px; margin-bottom: 10px; border-top:1px solid #6cac4f;}
 	#content #content-wrapper .post.sticky  p { font-family: 'Open Sans', sans-serif; font-weight: 300; font-size: 14px; margin-bottom: 10px;}
 	#content #content-wrapper .post.sticky  p.data { font-family: 'Open Sans', sans-serif; font-style:italic; font-size: 10px;margin-bottom: 10px;}		 
+	
 	#content #cols {float:left; margin:15px 0 0 120px; width:775px}
 	#content #cols .col {float:left; width:242px; padding:0 8px 0 8px;}	
-	#content #cols .col-header {width:210px; height:105px; border-bottom:1px solid #6cac4f;margin:0px 0px 10px 0px; padding:0 0 10px 0;}
+	#content #cols .col-header {width:210px; height:105px; border-bottom:1px solid #6cac4f; margin:0px 0px 10px 0px; padding:0 0 10px 0;}
 	#content #cols .col-body {width:210px;}
 	#content #cols .col-body p {text-align:justify; font-family: 'Open Sans', sans-serif; font-weight: 300; font-size: 14px; margin-bottom: 10px;}
 	#content #cols .col .thumb{float:left;}	
 	#content #cols .col .thumb img{width:100px; height:100px; border-radius: 50px;-webkit-border-radius: 50px;-moz-border-radius: 50px; border:2px solid #2b5e29;}
 	#content #cols .col .title {float:right; font-family: 'Open Sans', sans-serif; font-weight: 700; font-size: 14px;}		
-	#content #cols .col .title h1{font-family: 'Open Sans', sans-serif; font-weight: 700; font-size: 14px;}		
-	#content #content-wrapper {float:left; width:900px; padding:0 8px 0 8px;}
-	
-
-	
+	#content #cols .col .title h1{font-family: 'Open Sans', sans-serif; font-weight: 700; font-size: 14px;}				
+		
 #footer {clear:both;}
-	#footer h1 {font-family: 'Montserrat-Bold', sans-serif; font-size: 18px; margin: 40px 0 0 130px;}
+	
+	#footer h1 {font-family: 'Montserrat-Bold', sans-serif; font-size: 18px; margin: 20px 0 0 130px;}
+	
+	#footer #subfooter {height: 195px;}
+		#footer #subfooter  #logos {overflow:hidden; margin: 40px 0 0 130px;}
+		#footer #subfooter  #logos .logo{float:left;}
+	
+	#footer #mainfooter {height: 105px; margin:0 40px 0 50px; background-color:#dddddd;overflow:hidden;}
+	#footer #mainfooter .menu {margin:50px 0 0 50px; overflow:hidden; float:left;}
+	#footer #mainfooter .menu ul li { float:left; display:inline; font:normal 14px 'Montserrat', Arial, Helvetica, sans-serif; text-align:center; border-right:2px solid #000; }
+	#footer #mainfooter .menu ul li.last{ border-right:0px solid #000; }	
+	#footer #mainfooter .menu li  a{ display:block; width:100px;}
+	#footer #mainfooter .menu li a:hover { text-decoration:underline;}
+	#footer #mainfooter .logo {float:right; margin: 15px 130px 0 0;}
+	
